# CubisRenderer

./: CMakeLists.txt  README.md  callgrind.out.358049  callgrind.out.358062  output.tga  zoutput.tga
src/: colour.c  framebuffer.c  framebuffer.h  logging.h  main.c  screen.h
src/core/: colour.c  colour.h
src/framebuffer/: framebuffer.c  framebuffer.h
src/io/: io.c  io.h
src/maths/: maths.h  transform.h
src/model/: model.h  modelspace.h
src/render/: raster.c  raster.h
